; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getAssignedAddress.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_missing_libc_functions.c_getAssignedAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sockaddr_in*)* @getAssignedAddress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getAssignedAddress(%struct.sockaddr_in* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sockaddr_in*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.sockaddr_in* %0, %struct.sockaddr_in** %3, align 8
  %6 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %7 = icmp ne %struct.sockaddr_in* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %20

9:                                                ; preds = %1
  %10 = call i32 @ACGetAssignedAddress(i32* %4)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.sockaddr_in*, %struct.sockaddr_in** %3, align 8
  %16 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 4
  br label %18

18:                                               ; preds = %13, %9
  %19 = load i32, i32* %5, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %8
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @ACGetAssignedAddress(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
